add packages section with wild-tours section containing images and text

--- a/booking.html
+++ b/booking.html
@@ -12,7 +12,21 @@
   <div class="container">h</div>
 
     </div>
-
+    <div class="packages">
+      <p>Packages </p>
+      <div class="wild-tours">
+      <div class="pack1">
+        <img src="images/wd1.jpg" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium blanditiis a, rem quaerat deserunt quo tenetur eligendi delectus quasi laboriosam!</p>
+      </div>
+      <div class="pack2">
+      <img src="images/wd2.jpg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque voluptas veniam nemo, consectetur esse repellat eligendi laborum delectus hic voluptatum.</p></div>
+      <div class="pack3">
+      <img src="images/wd3.jpg" alt="">
+    </div>
+  </div>
+    </div>
   </div>
 </body>
 </html>
