add images and text to wild-tour section

--- a/booking.html
+++ b/booking.html
@@ -1,32 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/booking.css">
-</head>
-<body>
-  <div class="hero-section">
-  <div class="container">h</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/booking.css" />
+  </head>
+  <body>
+    <div class="hero-section">
+      <div class="container">h</div>
+    </div>
 
-    </div>
     <div class="packages">
-      <p>Packages </p>
-      <div class="wild-tours">
-      <div class="pack1">
-        <img src="images/wd1.jpg" alt="">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium blanditiis a, rem quaerat deserunt quo tenetur eligendi delectus quasi laboriosam!</p>
+      <div>
+        <h1>packages</h1>
       </div>
-      <div class="pack2">
-      <img src="images/wd2.jpg" alt="">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque voluptas veniam nemo, consectetur esse repellat eligendi laborum delectus hic voluptatum.</p></div>
-      <div class="pack3">
-      <img src="images/wd3.jpg" alt="">
+      <div>
+      <div class="wild-tours">
+        Domestic
+        <div class="pack1">
+          <img src="images/wd1.jpg" alt="" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Accusantium blanditiis a, rem quaerat deserunt quo tenetur eligendi
+            delectus quasi laboriosam!
+            <ul>
+              <li>Destination:</li>
+              <li>Transport:</li>
+              <li>Accommodation:</li>
+            </ul>
+          </p>
+          <button>Book Now</button>
+        </div>
+        <div class="pack2">
+          <img src="images/wd2.jpg" alt="" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
+            voluptas veniam nemo, consectetur esse repellat eligendi laborum
+            delectus hic voluptatum.
+            <ul>
+              <li>Destination:</li>
+              <li>Transport:</li>
+              <li>Accommodation:</li>
+            </ul>
+          </p>
+          <button>Book Now</button>
+        </div>
+        <div class="pack3">
+          <img src="images/wd3.jpg" alt="" />
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam
+            aliquid aperiam impedit est officiis perferendis tenetur dolor iure
+            rerum vitae.
+            <ul>
+              <li>Destination:</li>
+              <li>Transport:</li>
+              <li>Accommodation:</li>
+            </ul>
+          </p>
+          <button>Book Now</button>
+        </div>
+      </div>
     </div>
-  </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
