--- a/booking.html
+++ b/booking.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/02b0d3571e.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="css/booking.css" />
   </head>
   <body>
     <div class="hero-section">
-      <div class="container">h</div>
+      <div class="container"></div>
     </div>
-
+    <!-- <span class="material-icons-outlined">
+      &#xE87C;
+      </span> -->
     <div class="packages">
 
 
@@ -34,7 +38,7 @@
               <li>Accommodation:</li>
             </ul>
           </p>
-          <button onclick="submitFn()">Book Now</button>
+          <button class="book" onclick="myfunction()">Book Now</button>
         </div>
         <div class="pack2">
           <img src="images/wd2.jpg" alt="" />
@@ -48,7 +52,7 @@
               <li>Accommodation:</li>
             </ul>
           </p>
-          <button>Book Now</button>
+          <button class="book" onclick="myfunction()">Book Now</button>
         </div>
         <div class="pack3">
           <img src="images/wd3.jpg" alt="" />
@@ -62,7 +66,7 @@
               <li>Accommodation:</li>
             </ul>
           </p>
-          <button>Book Now</button>
+          <button class="book" onclick="myfunction()" >Book Now</button>
         </div>
       </div>
     </div>
@@ -82,7 +86,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
       <div class="coast2">
         <img src="images/cst2.jpg" alt="" />
@@ -96,7 +100,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
       <div class="coast3">
         <img src="images/cst3.jpg" alt="" />
@@ -110,7 +114,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
     </div>
     </div>
@@ -130,7 +134,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
       <div class="wknd2">
         <img src="images/wkn2.jpg" alt="" />
@@ -144,7 +148,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()"> Book Now</button>
       </div>
       <div class="wknd3">
         <img src="images/wkn3.jpg" alt="" />
@@ -158,7 +162,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
     </div>
     </div>
@@ -178,7 +182,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
       <div class="hold2">
         <img src="images/hol2.jpg" alt="" />
@@ -192,7 +196,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
       <div class="hold3">
         <img src="images/hol3.jpg" alt="" />
@@ -206,7 +210,7 @@
             <li>Accommodation:</li>
           </ul>
         </p>
-        <button>Book Now</button>
+        <button class="book" onclick="myfunction()">Book Now</button>
       </div>
     </div>
     </div>
@@ -222,13 +226,14 @@
         <form action="">
           <div class="flexInputs">
             <label for="">Please Enter Your Name</label>
-        <input type="text" id="name" placeholder="John Doe...">
+        <input type="text" id="name" name="fullName"  placeholder="John Doe..." required>
           </div>
+
           <div class="address-div">
 
           <div class="flexInputs">
           <label for="">Email Address</label>
-            <input type="email" id="email" placeholder="Email...">
+            <input type="email" id="email" placeholder="Email..." required>
         </div>
           <div class="flexInputs">
             <label for="">Telephone/Mobile</label>
@@ -255,12 +260,15 @@
         <input type="date">
       </div>
     </div>
+    <button onclick="test()" type="button"> test</button>
         </form>
 
-        <p id="submit" onclick="myFunction()">Submit</p>
+        <p id="info"></p>
+
+        <!-- <p id="submit" onclick="myFunction()">Submit</p>
           <p id="info"></p>
           <div class="btn-close">
-          <p id="close-btn"></p>
+          <p id="close-btn"></p> -->
         </div>
 
 
@@ -269,7 +277,7 @@
           </div>
 
 
-
+<script src="js/script.js"></script>
     </div>
   </body>
 </html>
