modified .js & .css files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,60 @@
 </head>
 
 <body>
+     <!--Navbar-->
+     <div class="navbar navbar-expand-sm bg-transparent navbar-dark py-4">
+        <div class="container nav">
+            <a href="#" class="navbar-brand">
+                <h1>Top<span class="nav-logo text-warning">Deck Safaris</span></h1>
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="#nav-item">
+                        <a href="#home" target="_blank" class="nav-link text-warning">
+                            <h4>Home</h4>
+                        </a>
+                    </li>
+                    <li class="#nav-item">
+                        <a href="#about" target="_blank" class="nav-link text-warning">
+                            <h4>About Us</h4>
+                        </a>
+                    </li>
+                    <li class="#nav-item">
+                        <a href="#contact" target="_blank" class="nav-link text-warning">
+                            <h4>Contact Us</h4>
+                        </a>
+                    </li>
+                    <li class="#nav-item">
+                        <a href="#Book" target="_blank" class="nav-link text-warning">
+                            <h4>Booking</h4>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class=" container logo text-center mt-5">
+        <h1 class="text-light ">TopDeck <span class="auto-type"></span></h1>
+    </div>
+    <div class="center">
+        <div class="btns">
+            <button><a href="#" target="_blank" rel="noopener noreferrer">Learn More</button>
+            <button type="submit"><a href="https://www.github.com" target="_blank" rel="noopener noreferrer">Book Here</button>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="./js/script.js"></script>
+
 
 </body>
 
