--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class=" container logo text-center mt-5">
-        <h1 class="text-light ">TopDeck <span class="auto-type"></span></h1>
+        <h1 class="text-light ">TopDeck Safaris<span class="auto-type"></span></h1>
     </div>
     <div class="center">
         <div class="btns">
