--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> 
     </div>
 
     <div class=" container logo text-center mt-5">
@@ -57,7 +57,7 @@
     <div class="center">
         <div class="btns">
             <button><a href="#" target="_blank" rel="noopener noreferrer">Learn More</button>
-            <button type="submit"><a href="https://www.github.com" target="_blank" rel="noopener noreferrer">Book Here</button>
+            <button class="btnn bg-success" type="submit"><a href="https://www.github.com" target="_blank" rel="noopener noreferrer">Book Here</button>
         </div>
     </div>
 
