--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navmenu">
+            <div class="collapse navbar-collapse text-dark" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="#nav-item">
                         <a href="#home" target="_blank" class="nav-link text-warning">
