--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </div> 
     </div>
 
-    <div class=" container logo text-center mt-5">
+    <div class=" container logo text-center mt-4 py-5">
         <h1 class="text-light ">TopDeck Safaris<span class="auto-type"></span></h1>
     </div>
     <div class="center">
-        <div class="btns">
+        <div class="btns mt-5">
             <button><a href="#" target="_blank" rel="noopener noreferrer">Learn More</button>
             <button class="btnn bg-success" type="submit"><a href="https://www.github.com" target="_blank" rel="noopener noreferrer">Book Here</button>
         </div>
@@ -64,7 +64,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="./js/script.js"></script>
 
 
