modified .html file

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class=" container logo text-center mt-4 py-5">
         <h1 class="text-light ">TopDeck Safaris<span class="auto-type"></span></h1>
     </div>
-    <div class="center">
-        <div class="btns mt-5">
+    <div class="center ms-auto">
+        <div class="btns  mt-5">
             <button><a href="#" target="_blank" rel="noopener noreferrer">Learn More</button>
             <button class="btnn bg-success" type="submit"><a href="https://www.github.com" target="_blank" rel="noopener noreferrer">Book Here</button>
         </div>
