--- a/index.html
+++ b/index.html
@@ -5,11 +5,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topdeck Safaris</title>
+    <title>TopDeck-Tours</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="./css/index.css">
 </head>
-
 <body>
+    <!--Navbar-->
+    <div class="navbar navbar-expand-sm bg-transparent navbar-dark py-2">
+        <div class="container nav">
+            <a href="#" class="navbar-brand">
+                <h1>Top<span class="nav-logo text-warning">Deck</span></h1>
+            </a>
 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                    <li class="#nav-item">
+                        <a href="#home" target="_blank" class="nav-link text-warning">
+                            <h4>Home</h4>
+                        </a>
+                    </li>
+                    <li class="#nav-item">
+                        <a href="#about" target="_blank" class="nav-link text-warning">
+                            <h4>About Us</h4>
+                        </a>
+                    </li>
+                    <li class="#nav-item">
+                        <a href="#contact" target="_blank" class="nav-link text-warning">
+                            <h4>Contact Us</h4>
+                        </a>
+                    </li>
+                    <li class="#nav-item">
+                        <a href="#Book" target="_blank" class="nav-link text-warning">
+                            <h4>Booking</h4>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+<div class="container bg-dark text-warning">
+    <div class="text-center my-5">
+        <h3>About Us</h3>
+        <h4>Welcome to TopDeck Safaris</h4>
+      </div>
+      <div class="row">
+          <div class="col-md-5">
+              <div class="img">
+                  <img src="images/topdeck4.png" alt="image">
+              </div>
+              
+          </div>
+          <div class="col-md-6">
+              <div>
+                  <p class="lead my-4">TopDeck safaris is a member of the travel industry providing clients with complete  travel related services.
+                    Our professional service begins with understanding our clients needs and delivering the best outcome through planning and scheduling.</p>
+                  <p class="lead my-4">TopDeck Safari offers spectacular safari scenaries,accommodation,wildbeast and adventure.Making holiday unforgatable experience.
+                    We have unbeatable packages and discounts that are guaranteed to top destination,just the way you want them.</p>
+                </div>
+          </div>
+      </div>
+</div>
 </body>
 
 </html>
