added about page

--- a/contact.html
+++ b/contact.html
@@ -2,83 +2,152 @@
 <!-- Created By CodingLab - www.codinglabweb.com -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8">
-   <!-- <title> Responsive Contact Us Form  | CodingLab </title>
+    <meta charset="UTF-8" />
+    <!-- <title> Responsive Contact Us Form  | CodingLab </title>
     <link rel="stylesheet" href="style.css">
     <!-- Fontawesome CDN Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <link rel="stylesheet" href="contact.css">
-    <link rel="stylesheet" href="bootstrap.css">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="bootstrap.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Navbar-->
     <div class="navbar navbar-expand-sm bg-transparent navbar-dark py-2">
-        <div class="container nav">
-            <a href="#" class="navbar-brand">
-                <h1>Top<span class="nav-logo text-warning">Deck Safaris</span></h1>
-            </a>
+      <div class="container nav">
+        <a href="#" class="navbar-brand">
+          <h1>Top<span class="nav-logo text-warning">Deck Safaris</span></h1>
+        </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="#nav-item">
-                        <a href="#home" target="_blank" class="nav-link text-warning">
-                            <h4>Home</h4>
-                        </a>
-                    </li>
-                    <li class="#nav-item">
-                        <a href="#about" target="_blank" class="nav-link text-warning">
-                            <h4>About Us</h4>
-                        </a>
-                    </li>
-                    <li class="#nav-item">
-                        <a href="#contact" target="_blank" class="nav-link text-warning">
-                            <h4>Contact Us</h4>
-                        </a>
-                    </li>
-                    <li class="#nav-item">
-                        <a href="#Book" target="_blank" class="nav-link text-warning">
-                            <h4>Booking</h4>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="#nav-item">
+              <a
+                href="index.html"
+                target="_blank"
+                class="nav-link text-warning"
+              >
+                <h4>Home</h4>
+              </a>
+            </li>
+            <li class="#nav-item">
+              <a
+                href="about.html"
+                target="_blank"
+                class="nav-link text-warning"
+              >
+                <h4>About Us</h4>
+              </a>
+            </li>
+            <li class="#nav-item">
+              <a href="#" target="_blank" class="nav-link text-warning">
+                <h4>Contact Us</h4>
+              </a>
+            </li>
+            <li class="#nav-item">
+              <a
+                href="booking.html"
+                target="_blank"
+                class="nav-link text-warning"
+              >
+                <h4>Booking</h4>
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-   </head>
-<body style="background-color: rgb(5, 85, 85);">
-    
+  </head>
+  <body style="background-color: rgb(5, 85, 85)">
     <div class="container">
-        <div style="text-align:center">
-          <h2>Contact Us</h2>
-          <p>For more Info send us a message</p>
-        </div>
+      <div style="text-align: center">
+        <h2>Contact Us</h2>
+        <p>For more Info send us a message</p>
+      </div>
+      <div class="column">
+        <br />
+        <img src="top deck.png" style="width: 100%" height="450px" />
+      </div>
+      <div class="row">
         <div class="column">
-            <br>
-            <img src="top deck.png" style="width:100%" height="450px">  
-          </div>
-        <div class="row">
-          <div class="column">
-            <form action="/action_page.php">
-              <label for="fname">First Name</label>
-              <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
-              <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
-              <label for="lname"><E-mail>Email</E-mail></label>
-              <input type="text" id="mail" name="E-mail" placeholder="Your E-mail.." required>
-              
-              <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-              <input type="submit" value="Submit">
-            </form>
-            <br>    
-            <div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=moringa%20school&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net"></a><br><style>.mapouter{position:relative;text-align:lefts;height: 450px;width: 400px;}</style><a href="https://www.embedgooglemap.net">embed google maps</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+          <form action="/action_page.php">
+            <label for="fname">First Name</label>
+            <input
+              type="text"
+              id="fname"
+              name="firstname"
+              placeholder="Your name.."
+              required
+            />
+            <label for="lname">Last Name</label>
+            <input
+              type="text"
+              id="lname"
+              name="lastname"
+              placeholder="Your last name.."
+              required
+            />
+            <label for="lname"><E-mail>Email</E-mail></label>
+            <input
+              type="text"
+              id="mail"
+              name="E-mail"
+              placeholder="Your E-mail.."
+              required
+            />
+
+            <label for="subject">Subject</label>
+            <textarea
+              id="subject"
+              name="subject"
+              placeholder="Write something.."
+              style="height: 170px"
+            ></textarea>
+            <input type="submit" value="Submit" />
+          </form>
+          <br />
+          <div class="mapouter">
+            <div class="gmap_canvas">
+              <iframe
+                width="500"
+                height="400"
+                id="gmap_canvas"
+                src="https://maps.google.com/maps?q=moringa%20school&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                frameborder="0"
+                scrolling="no"
+                marginheight="0"
+                marginwidth="0"
+              ></iframe
+              ><a href="https://fmovies-online.net"></a><br /><style>
+                .mapouter {
+                  position: relative;
+                  text-align: lefts;
+                  height: 450px;
+                  width: 400px;
+                }</style
+              ><a href="https://www.embedgooglemap.net">embed google maps</a
+              ><style>
+                .gmap_canvas {
+                  overflow: hidden;
+                  background: none !important;
+                  height: 500px;
+                  width: 600px;
+                }
+              </style>
+            </div>
           </div>
         </div>
       </div>
-   
-  
-</body>
+    </div>
+  </body>
 </html>
