--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-
-    <!--Navbar-->
-    <div class="navbar navbar-expand-sm bg-transparent navbar-dark py-2">
-        <div class="container nav">
-            <a href="#" class="navbar-brand">
-                <h1>Top<span class="nav-logo text-warning">Deck</span></h1>
-
      <!--Navbar-->
      <div class="navbar navbar-expand-sm bg-transparent navbar-dark py-4">
         <div class="container nav">
@@ -38,22 +31,22 @@
             <div class="collapse navbar-collapse text-dark" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="#nav-item">
-                        <a href="#home" target="_blank" class="nav-link text-warning">
+                        <a href="index.html"  class="nav-link text-warning">
                             <h4>Home</h4>
                         </a>
                     </li>
                     <li class="#nav-item">
-                        <a href="#about" target="_blank" class="nav-link text-warning">
+                        <a href="about.html" class="nav-link text-warning">
                             <h4>About Us</h4>
                         </a>
                     </li>
                     <li class="#nav-item">
-                        <a href="#contact" target="_blank" class="nav-link text-warning">
+                        <a href="contact.html"  class="nav-link text-warning">
                             <h4>Contact Us</h4>
                         </a>
                     </li>
                     <li class="#nav-item">
-                        <a href="#Book" target="_blank" class="nav-link text-warning">
+                        <a href="booking.html"  class="nav-link text-warning">
                             <h4>Booking</h4>
                         </a>
                     </li>
@@ -63,12 +56,12 @@
     </div>
 
     <div class=" container logo text-center mt-4 py-5">
-        <h1 class="text-light ">TopDeck Safaris<span class="auto-type"></span></h1>
+        <h1 class="text-light ">TopDeck Safaris <span class="auto-type"></span></h1>
     </div>
     <div class="center ms-auto">
         <div class="btns  mt-5">
-            <button><a href="#" target="_blank" rel="noopener noreferrer">Learn More</button>
-            <button class="btnn bg-success" type="submit"><a href="https://www.github.com" target="_blank" rel="noopener noreferrer">Book Here</button>
+            <button><a href="about.html"  rel="noopener noreferrer">Learn More</button>
+            <button class="btnn bg-success" type="submit"><a href="booking.html"  rel="noopener noreferrer">Book Here</button>
         </div>
     </div>
 
@@ -76,58 +69,8 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="./js/script.js"></script>
+    <script src="./index.js"></script>
 
-
-
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="#nav-item">
-                        <a href="#home" target="_blank" class="nav-link text-warning">
-                            <h4>Home</h4>
-                        </a>
-                    </li>
-                    <li class="#nav-item">
-                        <a href="#about" target="_blank" class="nav-link text-warning">
-                            <h4>About Us</h4>
-                        </a>
-                    </li>
-                    <li class="#nav-item">
-                        <a href="#contact" target="_blank" class="nav-link text-warning">
-                            <h4>Contact Us</h4>
-                        </a>
-                    </li>
-                    <li class="#nav-item">
-                        <a href="#Book" target="_blank" class="nav-link text-warning">
-                            <h4>Booking</h4>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-<div class="container bg-dark text-warning">
-    <div class="text-center my-5">
-        <h3>About Us</h3>
-        <h4>Welcome to TopDeck Safaris</h4>
-      </div>
-      <div class="row">
-          <div class="col-md-5">
-              <div class="img">
-                  <img src="images/topdeck4.png" alt="image">
-              </div>
-              
-          </div>
-          <div class="col-md-6">
-              <div>
-                  <p class="lead my-4">TopDeck safaris is a member of the travel industry providing clients with complete  travel related services.
-                    Our professional service begins with understanding our clients needs and delivering the best outcome through planning and scheduling.</p>
-                  <p class="lead my-4">TopDeck Safari offers spectacular safari scenaries,accommodation,wildbeast and adventure.Making holiday unforgatable experience.
-                    We have unbeatable packages and discounts that are guaranteed to top destination,just the way you want them.</p>
-                </div>
-          </div>
-      </div>
-</div>
 </body>
 
 </html>
