--- a/about.html
+++ b/about.html
@@ -1,63 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <!-- <link rel="stylesheet" href="bootstrap.css"> -->
-    <link rel="stylesheet" href="./css/about.css">
-</head>
-<body>
-    <div class="collapse navbar-collapse" id="navmenu">
-        <ul class="navbar-nav ms-auto">
+    <link rel="stylesheet" href="./css/about.css" />
+  </head>
+  <body>
+    <!--Navbar-->
+    <div class="navbar navbar-expand-sm bg-transparent navbar-dark py-4">
+      <div class="container nav">
+        <a href="#" class="navbar-brand">
+          <h1 class="top text-dark">
+            Top<span class="nav-logo text-warning">Deck Safaris</span>
+          </h1>
+        </a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse text-dark" id="navmenu">
+          <ul class="navbar-nav ms-auto">
             <li class="#nav-item">
-                <a href="index.html" target="_blank" class="nav-link text-warning">
-                    <h4>Home</h4>
-                </a>
+              <a href="index.html" class="nav-link text-warning">
+                <h4>Home</h4>
+              </a>
             </li>
             <li class="#nav-item">
-                <a href="#" target="_blank" class="nav-link text-warning">
-                    <h4>About Us</h4>
-                </a>
+              <a href="about.html" class="nav-link text-warning">
+                <h4>About Us</h4>
+              </a>
             </li>
             <li class="#nav-item">
-                <a href="contact.html" target="_blank" class="nav-link text-warning">
-                    <h4>Contact Us</h4>
-                </a>
+              <a href="contact.html" class="nav-link text-warning">
+                <h4>Contact Us</h4>
+              </a>
             </li>
             <li class="#nav-item">
-                <a href="booking.html" target="_blank" class="nav-link text-warning">
-                    <h4>Booking</h4>
-                </a>
+              <a href="booking.html" class="nav-link text-warning">
+                <h4>Booking</h4>
+              </a>
             </li>
-        </ul>
-    </div>
-</div>
-</div>
-<div class="container bg-dark text-warning">
-<div class="text-center my-5">
-<h3>About Us</h3>
-<h4>Welcome to TopDeck Safaris</h4>
-</div>
-<div class="row">
-  <div class="col-md-5">
-      <div class="img">
-          <img src="images/topdeck4.png" alt="image">
-      </div>
-      
-  </div>
-  <div class="col-md-6">
-      <div>
-          <p class="lead my-4">TopDeck safaris is a member of the travel industry providing clients with complete  travel related services.
-            Our professional service begins with understanding our clients needs and delivering the best outcome through planning and scheduling.</p>
-          <p class="lead my-4">TopDeck Safari offers spectacular safari scenaries,accommodation,wildbeast and adventure.Making holiday unforgatable experience.
-            We have unbeatable packages and discounts that are guaranteed to top destination,just the way you want them.</p>
+          </ul>
         </div>
-  </div>
-</div>
-</div>
-</body>
+      </div>
+    </div>
+
+    <div class="container bg-dark text-warning p-2">
+      <div class="text-center my-5">
+        <h3>About Us</h3>
+        <h4>Welcome to TopDeck Safaris</h4>
+      </div>
+      <div class="row">
+        <div class="col-md-5">
+          <div class="img">
+            <img src="images/topdeck4.png" alt="image" />
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div>
+            <p class="lead my-4">
+              TopDeck safaris is a member of the travel industry providing
+              clients with complete travel related services. Our professional
+              service begins with understanding our clients needs and delivering
+              the best outcome through planning and scheduling.
+            </p>
+            <p class="lead my-4">
+              TopDeck Safari offers spectacular safari
+              scenaries,accommodation,wildbeast and adventure.Making holiday
+              unforgatable experience. We have unbeatable packages and discounts
+              that are guaranteed to top destination,just the way you want them.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
