make changes to prices

--- a/booking.html
+++ b/booking.html
@@ -79,7 +79,8 @@
               <li>Accommodation:Various Options</li>
             </ul>
             3 Days, 2 nights<br>
-            Price: Ksh 7000pp
+            Price: Ksh 7000pp<br>
+            (Half price for Children)
           </p>
           <button id="sheldrick" class="book" onclick="myfunction(7000)">Book Now</button>
         </div>
@@ -94,7 +95,8 @@
               <li>Accommodation:Various Options</li>
             </ul>
             4 Days, 3 nights<br>
-            Price: Ksh 8000pp
+            Price: Ksh 8000pp<br>
+            (Half price for Children)
           </p>
           <button class="book" onclick="myfunction(8000)">Book Now</button>
         </div>
@@ -109,7 +111,8 @@
               <li>Accommodation:Various Options</li>
             </ul>
             3 Days, 2 nights<br>
-            Price: Ksh 8000pp
+            Price: Ksh 8000pp<br>
+            (Half price for Children)
           </p>
           <button class="book" onclick="myfunction()" >Book Now</button>
         </div>
@@ -130,7 +133,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 3000pp
+            Price: Ksh 3000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -145,7 +149,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 5000pp
+            Price: Ksh 5000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -160,7 +165,8 @@
             <li>Accommodation:Various Option</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 2000pp
+            Price: Ksh 2000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -181,7 +187,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 4500pp
+            Price: Ksh 4500pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -196,7 +203,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 5000pp
+            Price: Ksh 5000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()"> Book Now</button>
       </div>
@@ -211,7 +219,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 1500pp
+            Price: Ksh 1500pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -232,7 +241,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 2000pp
+            Price: Ksh 2000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -247,7 +257,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 4000pp
+            Price: Ksh 4000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
@@ -262,7 +273,8 @@
             <li>Accommodation:Various Options</li>
           </ul>
           3 Days, 2 nights<br>
-            Price: Ksh 2000pp
+            Price: Ksh 2000pp<br>
+            (Half price for Children)
         </p>
         <button class="book" onclick="myfunction()">Book Now</button>
       </div>
